--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 .background {
     padding: 23px 150px;
-    background-image:  url("/Amazon/images/bg50.jpg");
+    background-image:  url("/Netflix/images/bg50.jpg");
     background-repeat: no-repeat;
     background-position: center 50%;
     background-size: cover;
